--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,16 +1,17 @@
-@import "shared/reset.scss";
-@import "shared/font.scss";
-@import "shared/variables.scss";
-@import "shared/colors.scss";
-@import "shared/breakpoints.scss";
-@import "shared/container.scss";
-@import "shared/navbar.scss";
-@import "shared/footer.scss";
+@import "shared/reset";
+@import "shared/font";
+@import "shared/variables";
+@import "shared/colors";
+@import "shared/breakpoints";
+@import "shared/container";
+@import "shared/navbar";
+@import "shared/footer";
+@import "shared/animate";
 
-@import "home.scss";
-@import "about.scss";
+@import "home";
+@import "about";
 
 #app {
-  min-height: 100vh;
+  height: 100vh;
   background-color: $dark;
 }
