--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,7 +11,17 @@
 @import "home";
 @import "about";
 
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+}
+
 #app {
-  height: 100vh;
+  height: 100%;
   background-color: $dark;
+  overflow: auto;
 }
