--- a/src/assets/scss/shared/breakpoints.scss
+++ b/src/assets/scss/shared/breakpoints.scss
@@ -1,11 +1,11 @@
 @mixin tablet() {
-  @media all and (max-width: $tablet-max-width - 1px) {
+  @media all and (max-width: $tablet-max-width) {
     @content;
   }
 }
 
 @mixin mobile() {
-  @media all and (max-width: $mobile-max-width - 1px) {
+  @media all and (max-width: $mobile-max-width) {
     @content;
   }
 }
