--- a/src/assets/scss/about.scss
+++ b/src/assets/scss/about.scss
@@ -245,7 +245,7 @@
         background-color: $primary;
         cursor: pointer;
 
-        &:hover::after {
+        &::after {
           content: attr(data-tooltip);
           white-space: nowrap;
           position: absolute;
@@ -256,6 +256,13 @@
           border-radius: 5px;
           padding: 8px;
           background-color: $grey;
+          opacity: 0;
+          pointer-events: none;
+          transition: all 0.3s;
+        }
+
+        &:hover::after {
+          opacity: 1;
         }
       }
     }
