--- a/src/assets/scss/shared/variables.scss
+++ b/src/assets/scss/shared/variables.scss
@@ -1,4 +1,6 @@
 $mobile-max-width: 600px;
 $tablet-max-width: 1280px;
 $content-max-width: 600px;
+$navbar-height: 76px;
+$navbar-height-mobile: 56px;
 $footer-height: 32px;
