--- a/src/assets/scss/shared/font.scss
+++ b/src/assets/scss/shared/font.scss
@@ -10,7 +10,8 @@ a,
 p,
 ul,
 li,
-span {
+span,
+div {
   line-height: 1;
   font-family: Noto Sans TC, Din, Microsoft JhengHei, Avenir, Helvetica, Arial,
     sans-serif;
