--- a/src/assets/scss/shared/colors.scss
+++ b/src/assets/scss/shared/colors.scss
@@ -1,4 +1,22 @@
-$primary: #74b0b5;
 $dark: #1a1a1a;
 $light: #ffffff;
-$grey: #555555;
+$primary: #74b0b5;
+$primary-lighten-1: lighten($primary, 10%);
+$primary-lighten-2: lighten($primary, 20%);
+$primary-lighten-3: lighten($primary, 30%);
+$primary-lighten-4: lighten($primary, 40%);
+$primary-lighten-5: lighten($primary, 50%);
+$primary-darken-1: darken($primary, 10%);
+$primary-darken-2: darken($primary, 20%);
+$primary-darken-3: darken($primary, 30%);
+$primary-darken-4: darken($primary, 40%);
+$grey: #9e9e9e;
+$grey-lighten-1: lighten($grey, 10%);
+$grey-lighten-2: lighten($grey, 20%);
+$grey-lighten-3: lighten($grey, 30%);
+$grey-lighten-4: lighten($grey, 40%);
+$grey-lighten-5: lighten($grey, 50%);
+$grey-darken-1: darken($grey, 10%);
+$grey-darken-2: darken($grey, 20%);
+$grey-darken-3: darken($grey, 30%);
+$grey-darken-4: darken($grey, 40%);
