Update about page avatar

--- a/src/assets/scss/about.scss
+++ b/src/assets/scss/about.scss
@@ -80,7 +80,7 @@
       width: $avatar-size;
       height: $avatar-size;
       display: block;
-      border-radius: 25px;
+      border-radius: 30%;
     }
 
     .info {
