--- a/src/assets/scss/shared/animate/slide-fade.scss
+++ b/src/assets/scss/shared/animate/slide-fade.scss
@@ -1,9 +1,9 @@
 $modes: in, out;
 $translates: (
-  top: translateY(-100%),
-  right: translateX(100%),
-  bottom: translateY(100%),
-  left: translateX(-100%)
+  top: translate3d(0, -100%, 0),
+  right: translate3d(100%, 0, 0),
+  bottom: translate3d(0, 100%, 0),
+  left: translate3d(-100%, 0, 0)
 );
 
 @each $mode in $modes {
@@ -16,12 +16,12 @@ $translates: (
         }
         to {
           opacity: 1;
-          transform: translate(0, 0);
+          transform: translate3d(0, 0, 0);
         }
       } @else {
         from {
           opacity: 1;
-          transform: translate(0, 0);
+          transform: translate3d(0, 0, 0);
         }
         to {
           opacity: 0;
