--- a/src/assets/scss/about.scss
+++ b/src/assets/scss/about.scss
@@ -89,7 +89,9 @@
       z-index: 2;
 
       .contacts {
-        width: $content-max-width - $avatar-size - $space-between-with-header;
+        width: calc(
+          #{$content-max-width} - #{$avatar-size} - #{$space-between-with-header}
+        );
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
