--- a/src/assets/scss/shared/navbar.scss
+++ b/src/assets/scss/shared/navbar.scss
@@ -4,7 +4,7 @@
   height: $navbar-height;
   padding-left: 32px;
   padding-right: 32px;
-  border-radius: 0 ($navbar-height / 2) ($navbar-height / 2) 0;
+  border-radius: 0 calc(#{$navbar-height} / 2) calc(#{$navbar-height} / 2) 0;
   position: fixed;
   top: 0;
   left: 0;
@@ -13,7 +13,6 @@
   box-shadow: 0 0 10px $dark;
 
   @include mobile {
-    height: $navbar-height-mobile;
     padding-left: 16px;
     padding-right: 16px;
   }
