--- a/src/assets/scss/shared/footer.scss
+++ b/src/assets/scss/shared/footer.scss
@@ -2,7 +2,7 @@
   height: $footer-height;
 
   .copyright-text {
-    color: $primary-darken-2;
+    color: rgba($primary, 0.5);
     font-size: 12px;
     line-height: $footer-height;
     text-align: center;
