--- a/src/assets/scss/shared/font.scss
+++ b/src/assets/scss/shared/font.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700");
+@import url("/fonts/JetBrainsMono/font.css");
 
 h1,
 h2,
@@ -31,4 +32,9 @@ div {
   &-italic {
     font-style: italic;
   }
+}
+
+code {
+  font-family: 'JetBrains Mono';
+  line-height: 1.5;
 }
