--- a/src/assets/scss/shared/navbar.scss
+++ b/src/assets/scss/shared/navbar.scss
@@ -8,9 +8,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: $grey-darken-3;
+  background-color: $grey-lighten-3;
   z-index: 99999;
-  box-shadow: 0 0 10px $dark;
 
   @include mobile {
     padding-left: 16px;
@@ -32,7 +31,7 @@
         overflow: hidden;
         transition: all 0.1s;
 
-        .btn {
+        .icon-circular-btn {
           display: none;
         }
       }
