Add circular progress component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,6 +8,7 @@
 @import "shared/footer";
 @import "shared/animate";
 @import "shared/icon-circular-btn";
+@import "shared/circular-progress";
 
 @import "pages/home";
 @import "pages/about";
