--- a/src/assets/scss/pages/article-list.scss
+++ b/src/assets/scss/pages/article-list.scss
@@ -1,4 +1,12 @@
 #article-list {
+  &.loading {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+
   .divider {
     margin: 16px auto;
     width: 300px;
