--- a/src/assets/scss/pages/article.scss
+++ b/src/assets/scss/pages/article.scss
@@ -188,6 +188,13 @@
           }
         }
       }
+
+      dl {
+        * {
+          max-width: 100%;
+          overflow-x: auto;
+        }
+      }
     }
   }
 }
