--- a/src/assets/scss/pages/article.scss
+++ b/src/assets/scss/pages/article.scss
@@ -2,6 +2,14 @@
   &.content-container {
     max-width: 700px;
   }
+  
+  &.loading {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
 
   article {
     header {
