Seperate Article component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,8 @@
 @import "shared/icon-circular-btn";
 @import "shared/circular-progress";
 
+@import "components/article-body";
+
 @import "pages/home";
 @import "pages/about";
 @import "pages/article-list";
