--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,6 +11,7 @@
 @import "shared/circular-progress";
 
 @import "components/article-body";
+@import "components/article-list-item";
 
 @import "pages/home";
 @import "pages/about";
