--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -34,16 +34,24 @@ body {
 
   .scroll-to-top-btn {
     position: fixed;
-    right: calc(((100% - #{$content-max-width}) / 2) + 0.5rem);
+    right: calc(((100% - #{$content-max-width}) / 2) + 1rem);
     bottom: 3rem;
     opacity: 0.3;
+    transform: translateX(calc(100% + 1rem));
 
     &:hover {
       opacity: 1;
+      transform: translateX(calc(100% + 1rem));
     }
 
-    @media screen and (max-width: 700px) {
-      right: 0.5rem;
+    @media screen and (max-width: 816px) {
+      right: 1rem;
+      transform: translateX(calc(40% + 1rem));
+
+      &:hover {
+        opacity: 1;
+        transform: translateX(0);
+      }
     }
   }
 }
