--- a/src/assets/scss/shared/font.scss
+++ b/src/assets/scss/shared/font.scss
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700");
-@import url("/fonts/JetBrainsMono/font.css");
-
 h1,
 h2,
 h3,
@@ -20,6 +17,13 @@ div {
   letter-spacing: 1px;
 }
 
+code,
+code > * {
+  font-family: JetBrains Mono, Noto Sans TC, Din, Microsoft JhengHei, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+}
+
+
 .font {
   &-bold {
     font-weight: 500;
@@ -32,9 +36,4 @@ div {
   &-italic {
     font-style: italic;
   }
-}
-
-code {
-  font-family: 'JetBrains Mono';
-  line-height: 1.5;
 }
