--- a/src/assets/scss/shared/font.scss
+++ b/src/assets/scss/shared/font.scss
@@ -1,3 +1,5 @@
+@import url("/fonts/JetBrainsMono/font.css");
+
 h1,
 h2,
 h3,
@@ -11,14 +13,9 @@ li,
 span,
 div {
   line-height: 1;
-  font-family: Din, Microsoft JhengHei, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "PingFang TC", Din, "Microsoft YaHei", Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
   letter-spacing: 1px;
-
-  .wf-active & {
-    font-family: Noto Sans TC, Din, Microsoft JhengHei, Avenir, Helvetica, Arial,
-      sans-serif;
-  }
 }
 
 code,
