--- a/src/assets/scss/components/app/_navbar.scss
+++ b/src/assets/scss/components/app/_navbar.scss
@@ -31,7 +31,7 @@
         overflow: hidden;
         transition: all 0.1s;
 
-        .icon-circular-btn {
+        .navbar__btn {
           display: none;
         }
       }
@@ -45,7 +45,7 @@
       }
     }
 
-    .btn {
+    .navbar__btn {
       width: 50px;
       height: 50px;
       padding: 0;
@@ -55,40 +55,21 @@
       border: none;
       border-radius: 50%;
       outline: none;
-      background-color: $grey-darken-1;
       transition: all 0.3s;
+
+      .d-icon {
+        width: 1.75rem;
+        height: 1.75rem;
+      }
 
       @include mobile {
         width: 42px;
         height: 42px;
-      }
 
-      .icon {
-        width: 32px;
-        height: 32px;
-        color: $light;
-
-        @include mobile {
-          width: 22px;
-          height: 22px;
+        .d-icon {
+          width: 1.5rem;
+          height: 1.5rem;
         }
-      }
-
-      &:hover,
-      &.active {
-        background-color: $primary;
-      }
-
-      &:hover {
-        cursor: pointer;
-        transition: all 0.3s;
-        transform: scale(1.02);
-      }
-
-      &:active {
-        transition: all 0.3s;
-        transform: scale(0.98);
-        background-color: darken($primary, 20);
       }
     }
   }
