--- a/src/assets/scss/components/article/markdown-section.scss
+++ b/src/assets/scss/components/article/markdown-section.scss
@@ -1,109 +1,5 @@
-.article-body {
-  & > hr {
-    border: none;
-    text-align: center;
-    line-height: 0;
-    height: 1px;
-    padding: 1rem 0;
-
-    &::after {
-      content: "";
-      display: inline-block;
-      width: 100%;
-      height: 1px;
-      background-color: $grey-lighten-3;
-    }
-  }
-
-  .info {
-    & > div:not(:last-child) {
-      margin-bottom: 0.75rem;
-    }
-
-    &__title {
-      color: $primary;
-      font-size: 2.5rem;
-      margin-bottom: 4px !important;
-    }
-
-    &__date span {
-      color: $grey;
-      font-size: 12px;
-      font-weight: 100;
-      margin-right: 8px;
-    }
-
-    &__description {
-      font-size: 16px;
-      line-height: 24px;
-      color: $grey;
-    }
-
-    &-meta {
-      display: flex;
-      flex-wrap: wrap;
-
-      .label {
-        color: $grey;
-        font-size: 12px;
-        font-weight: 100;
-      }
-
-      &__category {
-        margin-right: 1rem;
-        margin-bottom: 12px;
-
-        .link {
-          display: inline-block;
-          color: $primary;
-          text-decoration: none;
-          margin-left: 8px;
-          transition: all 0.3s;
-
-          &:hover {
-            color: $primary-lighten-1;
-            transform: scale(1.05);
-            transition: all 0.1s;
-          }
-
-          &:active {
-            color: $primary-darken-1;
-            transform: scale(0.95);
-            transition: all 0.1s;
-          }
-        }
-      }
-
-      &__tags {
-        .tag {
-          color: $light;
-          text-decoration: none;
-          display: inline-block;
-          vertical-align: middle;
-          font-size: 12px;
-          padding: 4px;
-          border-radius: 5px;
-          background-color: $primary;
-          margin-left: 8px;
-          transition: all 0.3s;
-
-          &:hover {
-            background-color: $primary-lighten-1;
-            transform: scale(1.05);
-            transition: all 0.1s;
-          }
-
-          &:active {
-            background-color: $primary-darken-1;
-            transform: scale(0.95);
-            transition: all 0.1s;
-          }
-        }
-      }
-    }
-  }
-
-  .content {
+@mixin markdown-section {
+  .markdown-section {
     position: relative;
 
     & > *:not(:last-child) {
