--- a/src/assets/scss/components/article/meta-header.scss
+++ b/src/assets/scss/components/article/meta-header.scss
@@ -1,70 +1,12 @@
-.article-list-item {
-  $thumb-width: 16rem;
-
-  display: block;
-  padding: 16px 32px;
-  opacity: 0.8;
-  transition: all 0.3s;
-  text-decoration: none;
-
-  &:hover {
-    opacity: 1;
-    transform: scale(1.05);
-    transition: all 0.3s;
-  }
-
-  .thumb {
-    display: inline-block;
-    width: $thumb-width;
-    padding-top: calc(#{$thumb-width} * 0.75);
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
-
-    .icon-container,
-    img {
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-
-    .icon-container {
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      background-color: $grey-darken-4;
-
-      .icon {
-        width: 8rem;
-        height: 8rem;
-        color: $grey-darken-3;
-      }
-    }
-
-    img {
-      display: inline-block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  }
-
-  .info {
-    display: inline-block;
-    vertical-align: top;
-    width: calc(100% - #{$thumb-width});
-    height: 100%;
-    padding-left: 32px;
-
+@mixin meta-header {
+  .meta-header {
     & > div:not(:last-child) {
-      margin-bottom: 16px;
+      margin-bottom: 0.75rem;
     }
 
     &__title {
       color: $primary;
-      font-size: 2rem;
+      font-size: 2.5rem;
       margin-bottom: 4px !important;
     }
 
@@ -76,25 +18,26 @@
     }
 
     &__description {
-      min-height: 72px;
-      max-height: 96px;
       font-size: 16px;
       line-height: 24px;
       color: $grey;
-      overflow: hidden;
     }
 
-    &-meta {
+    .category-tags-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+
       .label {
         color: $grey;
         font-size: 12px;
         font-weight: 100;
       }
 
-      &__category {
+      .category {
+        margin-right: 1rem;
         margin-bottom: 12px;
 
-        .link {
+        &__link {
           display: inline-block;
           color: $primary;
           text-decoration: none;
@@ -115,8 +58,8 @@
         }
       }
 
-      &__tags {
-        .tag {
+      .tags {
+        &__tag {
           color: $light;
           text-decoration: none;
           display: inline-block;
@@ -141,21 +84,6 @@
           }
         }
       }
-    }
-  }
-
-  @include mobile {
-    padding: 0;
-
-    .thumb {
-      width: 100%;
-      padding-top: calc(100% * 0.75);
-    }
-
-    .info {
-      margin-top: 16px;
-      width: 100%;
-      padding: 0;
     }
   }
 }
