Update scripts with ts

--- a/src/assets/scss/components/article/article-body.scss
+++ b/src/assets/scss/components/article/article-body.scss
@@ -1,5 +1,5 @@
-@mixin markdown-section {
-  .markdown-section {
+@mixin article-body {
+  .article-body {
     position: relative;
 
     & > *:not(:last-child) {
