--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,4 +1,5 @@
 @import "shared/shared";
+@import "shared/container";
 @import "components/basic/d-icon";
 @import "components/basic/d-button";
 @import "components/basic/circular-progress";
