--- a/src/assets/scss/shared/_mixins.scss
+++ b/src/assets/scss/shared/_mixins.scss
@@ -27,3 +27,13 @@
     @content;
   }
 }
+
+@mixin no-scrollbar {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  & {
+    -ms-overflow-style: none; /* IE 11 */
+    scrollbar-width: none; /* Firefox 64 */
+  }
+}
