--- a/src/assets/scss/components/app/_navbar.scss
+++ b/src/assets/scss/components/app/_navbar.scss
@@ -49,17 +49,15 @@
       width: 50px;
       height: 50px;
       padding: 0;
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      border: none;
-      border-radius: 50%;
-      outline: none;
       transition: all 0.3s;
 
       .d-icon {
         width: 1.75rem;
         height: 1.75rem;
+      }
+
+      &.active .d-button  {
+        background-color: $primary;
       }
 
       @include mobile {
