--- a/src/assets/scss/components/article-list/article-list-item.scss
+++ b/src/assets/scss/components/article-list/article-list-item.scss
@@ -12,15 +12,37 @@
       opacity: 1;
       transform: scale(1.05);
       transition: all 0.3s;
+
+      .thumb .edit-article-btn {
+        opacity: 1;
+        transition: all 0.3s;
+      }
     }
 
     .thumb {
+      position: relative;
       display: inline-block;
       width: $thumb-width;
       padding-top: calc(#{$thumb-width} * 0.75);
       border-radius: 10px;
       position: relative;
       overflow: hidden;
+
+      .edit-article-btn {
+        opacity: 0;
+        position: absolute;
+        top: 1rem;
+        left: 1rem;
+        z-index: 10;
+        font-size: 0.5rem;
+        transition: all 0.3s;
+
+        .d-icon {
+          width: 1rem;
+          height: 1rem;
+          color: $light;
+        }
+      }
 
       .icon-container,
       img {
