--- a/src/assets/scss/components/basic/_d-button.scss
+++ b/src/assets/scss/components/basic/_d-button.scss
@@ -1,28 +1,38 @@
 .d-button {
-  display: inline-flex;
+  &-container {
+    display: inline-block;
+  }
+
+  display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.75rem 1rem;
+  padding: 0.25rem 0.5rem;
   border: none;
   border-radius: 5px;
   outline: none;
   background-color: $grey;
   transition: all 0.3s;
 
-  &:hover,
-  &.active {
-    background-color: $primary;
-  }
-
   &:hover {
     cursor: pointer;
     transition: all 0.3s;
     transform: scale(1.02);
+    background-color: $primary;
   }
 
-  &.circular {
+  .circular & {
     padding: 0.75rem;
     border-radius: 50%;
+  }
+
+  .slot-container {
+    white-space: nowrap;
+
+    & > * {
+      display: inline-block;
+      vertical-align: middle;
+      color: $light;
+    }
   }
 
   .d-icon {
