--- a/src/assets/scss/pages/article-list.scss
+++ b/src/assets/scss/pages/article-list.scss
@@ -3,6 +3,8 @@
 @import "../components/article-list/article-list-item";
 
 #article-list {
+  position: relative;
+
   &.loading {
     display:flex;
     justify-content: center;
@@ -16,6 +18,32 @@
     max-width: 300px;
     height: 1px;
     background-color: rgba($grey-darken-4, 0.2);
+  }
+
+  .new-article-btn {
+    position: absolute;
+    right: 2rem;
+    top: calc(#{$navbar-height} - 1rem);
+    opacity: 0.3;
+    transition: all 0.3s;
+
+    &:hover {
+      opacity: 0.8;
+    }
+
+    .d-icon {
+      width: 1.75rem;
+      height: 1.75rem;
+    }
+
+    @include mobile {
+      right: 1.5rem;
+
+      .d-icon {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
+    }
   }
 
   @include article-list-item;
