--- a/src/assets/scss/components/article/content-section.scss
+++ b/src/assets/scss/components/article/content-section.scss
@@ -152,7 +152,15 @@
   }
 
   img {
+    display: block;
     max-width: 100%;
+    margin: auto;
+
+    &.loading {
+      width: 100px;
+      height: 100px;
+      margin: 0;
+    }
   }
 
   mark {
