--- a/src/assets/scss/components/basic/_d-button.scss
+++ b/src/assets/scss/components/basic/_d-button.scss
@@ -6,6 +6,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 100%;
+  max-height: 100%;
   padding: 0.25rem 0.5rem;
   border: none;
   border-radius: 5px;
@@ -21,7 +23,9 @@
   }
 
   .circular & {
-    padding: 0.75rem;
+    padding: 0;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
   }
 
