--- a/src/assets/scss/pages/article-list.scss
+++ b/src/assets/scss/pages/article-list.scss
@@ -22,8 +22,8 @@
 
   .new-article-btn {
     position: absolute;
-    right: 2rem;
-    top: calc(#{$navbar-height} - 1rem);
+    top: 1rem;
+    right: 1rem;
     opacity: 0.3;
     transition: all 0.3s;
 
@@ -37,8 +37,6 @@
     }
 
     @include mobile {
-      right: 1.5rem;
-
       .d-icon {
         width: 1.5rem;
         height: 1.5rem;
