--- a/src/assets/scss/pages/article.scss
+++ b/src/assets/scss/pages/article.scss
@@ -26,8 +26,8 @@
 
   .edit-article-btn {
     position: absolute;
-    right: 2rem;
-    top: calc(#{$navbar-height} - 1rem);
+    top: 1rem;
+    right: 1rem;
     opacity: 0.3;
     transition: all 0.3s;
 
@@ -41,8 +41,6 @@
     }
 
     @include mobile {
-      right: 1.5rem;
-
       .d-icon {
         width: 1.5rem;
         height: 1.5rem;
