--- a/src/assets/scss/pages/article-editor.scss
+++ b/src/assets/scss/pages/article-editor.scss
@@ -6,6 +6,8 @@
 #article-editor {
   &.view-container {
     padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
     width: 100%;
 
     &.loading {
@@ -114,6 +116,10 @@
       vertical-align: top;
     }
 
+    .preview-container {
+      padding: 0 1rem;
+    }
+
     .splitter {
       display: none;
     }
@@ -153,22 +159,44 @@
 
       .splitter {
         display: inline-block;
+        padding: 0 0.125rem;
         width: $splitter-size;
         height: 100%;
 
+        .bar {
+          width: 100%;
+          height: 100%;
+          background-color: $grey-lighten-2;
+          border-radius: 1rem;
+          cursor: pointer;
+          transition: all 0.1s;
+          user-select: none;
+        }
+
+        &:hover {
+          .bar {
+            background-color: $grey-lighten-3;
+            transition: all 0.1s;
+          }
+        }
+
         @include mobile {
+          padding: 0.1rem 0;
           width: 100%;
           height: $splitter-size;
         }
       }
 
-      .preview-container {
-        padding-left: 2rem;
+      .editor-container {
+        width: calc(var(--editor-width, 50%) - #{$splitter-size} / 2);
+      }
+
+      .preview-container{
+        width: calc(var(--preview-width, 50%) - #{$splitter-size} / 2);
       }
 
       .editor-container,
       .preview-container {
-        width: calc(50% - #{$splitter-size});
         height: 100%;
         max-height: 100%;
         overflow-y: auto;
@@ -184,7 +212,6 @@
 
     .editor-container {
       .vue-codemirror {
-
         * {
           font-family: "JetBrains Mono", monospace;
         }
